# ws-tcg-crawler

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
src/: downloader.py  main.py  models.py  parser.py
