[project]
name = "ws-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "playwright>=1.56.0",
    "pydantic>=2.12.4",
    "questionary>=2.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.6",
]
